TST: Remove tests for numpy 1.7 and 1.8
We only test for the latest numpy version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: python
 python:
   - "2.7"
-env:
-  - NUMPY_VERSION="" # environment to test with the latest version of NumPy
-  - NUMPY_VERSION="=1.8"
-  - NUMPY_VERSION="=1.7"
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-2.2.2-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
@@ -13,7 +9,7 @@ before_install:
   # Update conda itself
   - conda update --yes conda
 install:
-  - conda create --yes -n env_name python=$TRAVIS_PYTHON_VERSION pip numpy${NUMPY_VERSION} scipy matplotlib openpyxl=1.8.2 pandas nose flake8 pep8
+  - conda create --yes -n env_name python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib openpyxl=1.8.2 pandas nose flake8 pep8
   - source activate env_name
   - pip install coverage coveralls flake8
   - pip install -e '.[all]'
